--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
-    "prefix": ".",
-    "botName": "Xlon",
+    "prefix": "",
+    "botName": "",
 
-    "botIcon": "https://imgur.com/gallery/Wzu1Ozc",
-    "botId": "837349545633251429",
+    "botIcon": "",
+    "botId": "",
     "botVersion": "v1.1 Stable",
     "botVersionShort": "v1.1",
 
-    "ownerId": "483145558547234837",
-    "ownerName": "Xghost12S",
+    "ownerId": "",
+    "ownerName": "",
 
     "color": "",
     "colour": "",
